# agentic-ai-model

reference/: wireframe.html
teams-bot/: .env.example  .env.test  .gitignore  README.md  pyproject.toml
teams-bot/src/teams_bot/: __init__.py  auth.py  config.py  graph_client.py  main.py
teams-bot/src/teams_bot/models/: __init__.py  callbacks.py  requests.py  responses.py
teams-bot/src/teams_bot/routers/: __init__.py  events.py  meetings.py  transcription.py
teams-bot/src/teams_bot/services/: __init__.py  call_service.py  subscription_service.py  transcription_service.py
teams-bot/src/teams_bot/utils/: meeting_url_parser.py
teams-bot/tests/: conftest.py  test_events.py  test_meeting_url_parser.py  test_meetings.py  test_transcription.py
yoda-dashboard/: index.html  package-lock.json  package.json
yoda-dashboard/src/: App.css  App.jsx  index.css
yoda-dashboard/src/components/: Sidebar.jsx  TopBar.jsx
yoda-dashboard/src/components/views/: ActionsView.jsx  BriefView.jsx  ChatView.jsx  DashboardView.jsx  DigestView.jsx  DocumentsView.jsx  InsightsView.jsx  MeetingsView.jsx  SummaryView.jsx
